--- a/src/form.css
+++ b/src/form.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+
 * {
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 html,
@@ -21,4 +24,50 @@ body {
   max-width: 600px; /*  the bigger screen. For that, set the max-width to 600px. */
   background-color: #ffc93c;
   border: 1px solid #86e5ff;
+}
+
+.form-header {
+  padding: 15px 0;
+  border: 1px solid #cccccc;
+}
+
+.form-header h1 {
+  font-size: 28px;
+  text-align: center;
+  color: #666;
+}
+
+.form-body {
+  background-color: #fff9c4;
+  padding: 5px 10px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.input-group {
+  flex: 1; /* flex will stretch the width of input-group inside form(sing-up) */
+  display: flex;
+  flex-direction: column;
+  margin: 10px 5px;
+}
+
+label {
+  color: black;
+  font-size: 17px;
+  font-weight: 500;
+}
+
+input[type="text"] {
+  font-size: 18px;
+  height: 34px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #666;
+  border: 1px solid #d6d6d6;
+  border-radius: 4px;
+  background: white;
+  outline: none;
 }
