--- a/src/form.css
+++ b/src/form.css
@@ -60,7 +60,9 @@ label {
   font-weight: 500;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="email"],
+input[type="password"] {
   font-size: 18px;
   height: 34px;
   padding-left: 10px;
