--- a/src/form.css
+++ b/src/form.css
@@ -7,7 +7,9 @@
 
 html,
 body {
-  height: 100%;
+  /* height: 100%; */
+  max-height: 100%;
+  min-width: 50%;
 }
 
 .registration-page {
@@ -131,7 +133,7 @@ textarea {
   font-size: 17px;
   border: none;
   border-radius: 5px;
-  color: #bcf5e7;
+  color: white;
   cursor: pointer;
 }
 
